<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintVertical_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/langLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:spinnerMode="dialog"
                    android:contentDescription="@string/spinner_from"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/spinnerTo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/spinnerFrom"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
                    android:contentDescription="@string/arrow_desc" />

                <Spinner
                    android:id="@+id/spinnerTo"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:spinnerMode="dialog"
                    android:textAlignment="textEnd"
                    android:contentDescription="@string/spinner_to"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btnTranslate"
                    android:id="@+id/txtToTranslate"
                    android:hint="@string/textview_input"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:gravity="top|start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textToTranslate"
                        android:inputType="textMultiLine"
                        android:autofillHints="Insert text..." />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    app:layout_constraintTop_toBottomOf="@id/txtToTranslate"
                    app:layout_constraintBottom_toTopOf="@id/txtTranslated"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/btnTranslate"
                    android:text="@string/button_translate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/materialButtonOutlinedStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnReset"
                    android:text="@string/button_reset"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtToTranslate"
                    app:layout_constraintBottom_toTopOf="@+id/txtTranslated"
                    style="?attr/materialButtonOutlinedStyle" />

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@id/btnTranslate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/txtTranslated"
                    android:hint="@string/textview_output"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/translatedText"
                        android:gravity="top|start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_read"
                    app:icon="@drawable/ic_baseline_volume_up_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />

                <Button
                    android:id="@+id/btnCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_content_copy_24"
                    android:text="@string/button_copy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>